import React from "react";
import { shallow } from "enzyme";
import { ExpensesSummary } from "../../components/ExpensesSummary";

test("Should render ExpenseSummary correctly with 1 expense", () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={235} />);
    expect(wrapper).toMatchSnapshot();
});

test("Should render ExpenseSummary correctly with multiple expense", () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={23} expensesTotal={456565628779879} />);
    expect(wrapper).toMatchSnapshot();
});